--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "module": "ES6",
+        "target": "ES2017",
+        "module": "ES2015",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "outDir": "./dist",
-        "moduleResolution": "node",
-        "allowJs": true,
-        "resolveJsonModule": true
+        "lib": ["ES2017", "DOM"],
+        "outDir": "./dist"
     },
     "include": ["*.ts"],
     "exclude": ["node_modules"]
